// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DateControlRenderer.vue should render component and match snapshot 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="My Date"
    >
      <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder input">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-text-field__slot">
              <label for="#-input"
                     class="v-label v-label--active theme--light"
                     style="left: 0px; position: absolute;"
              >
                My Date
              </label>
              <input id="#-input"
                     type="text"
              >
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-menu">
      </div>
    </div>
  </div>
</div>
`;

exports[`DateControlRenderer.vue should render component and match snapshot when clicked 1`] = `
<div data-app="true"
     class="v-application v-application--is-ltr theme--light"
     id="app"
>
  <div class="v-application--wrap">
    <div id="#"
         class="control"
         appliedoptions="[object Object]"
         errors
         label="My Date"
    >
      <div class="v-input v-input--is-label-active v-input--is-dirty theme--light v-text-field v-text-field--placeholder input">
        <div class="v-input__control">
          <div class="v-input__slot">
            <div class="v-text-field__slot">
              <label for="#-input"
                     class="v-label v-label--active theme--light"
                     style="left: 0px; position: absolute;"
              >
                My Date
              </label>
              <input id="#-input"
                     type="text"
              >
            </div>
          </div>
          <div class="v-text-field__details">
            <div class="v-messages theme--light">
              <transition-group-stub tag="div"
                                     name="message-transition"
                                     class="v-messages__wrapper"
              >
              </transition-group-stub>
            </div>
          </div>
        </div>
      </div>
      <div class="v-menu">
        <transition-stub name="scale-transition">
        </transition-stub>
      </div>
    </div>
  </div>
  <div role="menu"
       class="v-menu__content theme--light menuable__content__active "
       style="max-height: auto; min-width: 290px; max-width: auto; top: 12px; left: 0px; transform-origin: top left; z-index: 8; display: none;"
  >
    <div class="v-picker v-card v-picker--date theme--light">
      <div class="v-picker__title primary">
        <div class="v-date-picker-title">
          <div class="v-picker__title__btn v-date-picker-title__year">
            2021
          </div>
          <div class="v-picker__title__btn v-date-picker-title__date v-picker__title__btn--active">
            <transition-stub name="picker-transition">
              <div>
                Tue, Mar 9
              </div>
            </transition-stub>
          </div>
        </div>
      </div>
      <div class="v-picker__body theme--light"
           style="width: 290px;"
      >
        <transition-stub name="fade-transition">
          <div>
            <div class="v-date-picker-header theme--light">
              <button type="button"
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      aria-label="Previous month"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-left theme--light"
                  >
                  </i>
                </span>
              </button>
              <div class="v-date-picker-header__value">
                <transition-stub name="tab-transition">
                  <div class="accent--text">
                    <button type="button">
                      March 2021
                    </button>
                  </div>
                </transition-stub>
              </div>
              <button type="button"
                      class="v-btn v-btn--icon v-btn--round theme--light v-size--default"
                      aria-label="Next month"
              >
                <span class="v-btn__content">
                  <i aria-hidden="true"
                     class="v-icon notranslate mdi mdi-chevron-right theme--light"
                  >
                  </i>
                </span>
              </button>
            </div>
            <div class="v-date-picker-table v-date-picker-table--date theme--light">
              <transition-stub name="tab-transition">
                <table>
                  <thead>
                    <tr>
                      <th>
                        S
                      </th>
                      <th>
                        M
                      </th>
                      <th>
                        T
                      </th>
                      <th>
                        W
                      </th>
                      <th>
                        T
                      </th>
                      <th>
                        F
                      </th>
                      <th>
                        S
                      </th>
                    </tr>
                  </thead>
                  <tbody>
                    <tr>
                      <td>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            1
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            2
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            3
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            4
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            5
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            6
                          </div>
                        </button>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            7
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            8
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--active v-btn--rounded theme--light accent"
                        >
                          <div class="v-btn__content">
                            9
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            10
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            11
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            12
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            13
                          </div>
                        </button>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            14
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            15
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            16
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            17
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            18
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            19
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            20
                          </div>
                        </button>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            21
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            22
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            23
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            24
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            25
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            26
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            27
                          </div>
                        </button>
                      </td>
                    </tr>
                    <tr>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            28
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            29
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            30
                          </div>
                        </button>
                      </td>
                      <td>
                        <button type="button"
                                class="v-btn v-btn--text v-btn--rounded theme--light"
                        >
                          <div class="v-btn__content">
                            31
                          </div>
                        </button>
                      </td>
                      <td>
                      </td>
                      <td>
                      </td>
                      <td>
                      </td>
                    </tr>
                  </tbody>
                </table>
              </transition-stub>
            </div>
          </div>
        </transition-stub>
      </div>
      <div class="v-picker__actions v-card__actions">
        <button type="button"
                class="v-btn v-btn--text theme--light v-size--default"
        >
          <span class="v-btn__content">
            Clear
          </span>
        </button>
        <div class="spacer">
        </div>
        <button type="button"
                class="v-btn v-btn--text theme--light v-size--default"
        >
          <span class="v-btn__content">
            Cancel
          </span>
        </button>
        <button type="button"
                class="v-btn v-btn--text theme--light v-size--default primary--text"
        >
          <span class="v-btn__content">
            OK
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
